objects/CDRQualitativeData__c.object
<CustomObject>
    <fields>
        <fullName>AUMDate__c</fullName>
        <label>AUM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccountSFID__c</fullName>
        <formula>CASESAFEID( Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Firm)</relationshipLabel>
        <relationshipName>CDRQualitativeData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalInfoBoiler__c</fullName>
        <label>Additional Info Boiler</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AdditionalInfoSFID__c</fullName>
        <formula>CASESAFEID (AdditionalInfo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Info SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalInfo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Additional Info</label>
        <referenceTo>AdditionalInfo__c</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Additional Info)</relationshipLabel>
        <relationshipName>CDRQualitativeData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BeganInvestmentCareer__c</fullName>
        <label>Began Investment Career</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenchmarkBoiler__c</fullName>
        <label>Benchmark Boiler</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BenchmarkLegalName__c</fullName>
        <label>Benchmark Legal Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BenchmarkShortName__c</fullName>
        <label>Benchmark Short Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benchmark</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Benchmark)</relationshipLabel>
        <relationshipName>CDRQualitativeDataBenchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CUSIPFormatted__c</fullName>
        <formula>IF(NOT(ISBLANK(CUSIP__c)),LEFT( CUSIP__c,6)&amp;"-"&amp;MID(CUSIP__c,7,2)&amp;"-"&amp;RIGHT(CUSIP__c,1),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUSIP Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <label>CUSIP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Child Firm)</relationshipLabel>
        <relationshipName>CDRQualitativeDataChildFirms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChildProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Child Product)</relationshipLabel>
        <relationshipName>CDRQualitativeDataChildProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactFullName__c</fullName>
        <label>Contact Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactImageSmall__c</fullName>
        <label>Contact Image Small</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContactImage__c</fullName>
        <label>Contact Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Contact)</relationshipLabel>
        <relationshipName>CDRQualitativeData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributionFrequency__c</fullName>
        <label>Distribution Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>NOW()+30</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <label>Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NYSE Arca</fullName>
                    <default>true</default>
                    <label>NYSE Arca</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenseCapExpirationDate__c</fullName>
        <label>Expense Cap Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenseCapType__c</fullName>
        <label>Expense Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual</fullName>
                    <default>true</default>
                    <label>Contractual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenseCap__c</fullName>
        <label>Expense Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FacebookURL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FirmDescription50Words__c</fullName>
        <label>Firm Description 50 Words</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmDescriptionOneSentence__c</fullName>
        <label>Firm Description One Sentence</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmLegalName__c</fullName>
        <label>Firm Legal Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmLogoBWSmall__c</fullName>
        <label>Firm Logo B&amp;W Small</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmLogoBW__c</fullName>
        <label>Firm Logo B&amp;W</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmLogoSmall__c</fullName>
        <label>Firm Logo Small</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmLogo__c</fullName>
        <label>Firm Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirmShortName__c</fullName>
        <label>Firm Short Name</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Founded__c</fullName>
        <label>Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundFamily__c</fullName>
        <label>Fund Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Natixis Funds</fullName>
                    <default>true</default>
                    <label>Natixis Funds</label>
                </value>
                <value>
                    <fullName>Oakmark Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundHighlights__c</fullName>
        <label>Fund Highlights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FundNumber__c</fullName>
        <label>Fund Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossExpenseRatio__c</fullName>
        <label>Gross Expense Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HasPendingActivationRow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Pending Activation Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasStagingRow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Staging Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <label>Headquarters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalDate__c</fullName>
        <label>Historical Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <label>ISIN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InceptionDate__c</fullName>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntradayNetAssetValueSymbol__c</fullName>
        <label>Intraday Net Asset Value Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentManagerOverview__c</fullName>
        <label>Investment Manager Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JoinedtheFirm__c</fullName>
        <label>Joined the Firm</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastProspectusDate__c</fullName>
        <label>Last Prospectus Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedInURL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ManagedFundSince__c</fullName>
        <label>Managed Fund Since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaximumCDSC__c</fullName>
        <label>Maximum CDSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaximumSalesCharge__c</fullName>
        <label>Maximum Sales Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NameWithDesignations__c</fullName>
        <label>Name with Designations</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NetExpenseRatio__c</fullName>
        <label>Net Expense Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NextPendingActivationDate__c</fullName>
        <label>Next Pending Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NextStagingDate__c</fullName>
        <label>Next Staging Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ParentKey__c</fullName>
        <formula>CASE( RecordType.Name,
"Additional Info", AdditionalInfo__c,
"Benchmark", Benchmark__c,
"Benchmark-Additional Info", Benchmark__c &amp; AdditionalInfo__c,
"Contact", Contact__c,
"Contact-Additional Info", Contact__c &amp; AdditionalInfo__c,
"ETF", Product__c,
"Firm", Account__c,
"Firm-Additional Info", Account__c &amp; AdditionalInfo__c,
"Firm-Child Firm", Account__c &amp; ChildAccount__c,
"Firm-Contact", Account__c &amp; Contact__c,
"Firm-Product", Account__c &amp; Product__c,
"Mutual Fund", Product__c,
"Product-Additional Info", Product__c &amp; AdditionalInfo__c,
"Product-Benchmark", Product__c &amp; Benchmark__c,
"Product-Child Product", Product__c &amp; ChildProduct__c,
"Product-Contact", Product__c &amp; Contact__c,
"Share Class", Product__c,
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingActivationDate__c</fullName>
        <label>Pending Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PortfolioApplications__c</fullName>
        <label>Portfolio Applications</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PortfolioManagerType__c</fullName>
        <label>Portfolio Manager Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                    <default>true</default>
                    <label>Advisor</label>
                </value>
                <value>
                    <fullName>Sub Advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PortfolioStrategy__c</fullName>
        <label>Portfolio Strategy</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProcessPhilosophyRiskMgt__c</fullName>
        <label>Process, Philosophy, Risk Mgt</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductBoiler__c</fullName>
        <label>Product Boiler</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductHeadline__c</fullName>
        <label>Product Headline</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductLegalName__c</fullName>
        <label>Product Legal Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductSFID__c</fullName>
        <formula>CASESAFEID( Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductShortName__c</fullName>
        <label>Product Short Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CDR Qualitative Data (Product)</relationshipLabel>
        <relationshipName>CDRQualitativeDataProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepresentativeBenchmark__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representative Benchmark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepresentativeChildProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representative Child Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShareClassName__c</fullName>
        <formula>CASE( TEXT(ShareClass__c), 
"A","Class A", 
"B","Class B",
"C","Class C", 
"N","Class N",
"T","Class T", 
"Y","Class Y",
"Admin","Admin Class",
"Advisor","Advisor Class", 
"Institutional","Institutional Class", 
"Investor","Investor Class",
"Retail","Retail Class",
"Service","Service Class",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareClass__c</fullName>
        <label>Share Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShareClass</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StagingDate__c</fullName>
        <label>Staging Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Pending Activation</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <description>This field allows the triggering of business logic without updating data.</description>
        <label>Touch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradingSymbol__c</fullName>
        <label>Trading Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterURL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open-End</fullName>
                </value>
                <value>
                    <fullName>Closed-End</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Natixis Executive</fullName>
                </value>
                <value>
                    <fullName>Client Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Natixis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhyChooseThisFund__c</fullName>
        <label>Why Choose this Fund</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X12b1Fee__c</fullName>
        <label>12b-1 Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <description>This object stores qualitative data about contacts, firms, products, additional information and their relationships to one another.</description>
    <label>CDR Qualitative Data</label>
    <nameField>
        <label>CDR Qualitative Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDR Qualitative Data</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Additional_Info</fullName>
        <columns>NAME</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.AdditionalInfo</value>
        </filters>
        <label>Additional Info</label>
    </listViews>
    <listViews>
        <fullName>All_CDR_Qualitative_Data</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>*All CDR Qualitative Data</label>
    </listViews>
    <listViews>
        <fullName>All_My_CDR_Qualitative_Data</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>*All My CDR Qualitative Data</label>
    </listViews>
    <listViews>
        <fullName>Benchmark</fullName>
        <columns>NAME</columns>
        <columns>Benchmark__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.Benchmark</value>
        </filters>
        <label>Benchmark</label>
    </listViews>
    <listViews>
        <fullName>Benchmark_Additional_Info</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.BenchmarkAdditionalInfo</value>
        </filters>
        <label>Benchmark-Additional Info</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.Contact</value>
        </filters>
        <label>Contact</label>
    </listViews>
    <listViews>
        <fullName>Contact_Additional_Info</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.ContactAdditionalInfo</value>
        </filters>
        <label>Contact-Additional Info</label>
    </listViews>
    <listViews>
        <fullName>ETF</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.ETF</value>
        </filters>
        <label>ETF</label>
    </listViews>
    <listViews>
        <fullName>Firm</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.Firm</value>
        </filters>
        <label>Firm</label>
    </listViews>
    <listViews>
        <fullName>FirmAdditionalInfo</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.FirmAdditionalInfo</value>
        </filters>
        <label>Firm-Additional Info</label>
    </listViews>
    <listViews>
        <fullName>Firm_Child_Firm</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChildAccount__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.FirmChildFirm</value>
        </filters>
        <label>Firm-Child Firm</label>
    </listViews>
    <listViews>
        <fullName>Firm_Contact</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.FirmContact</value>
        </filters>
        <label>Firm-Contact</label>
    </listViews>
    <listViews>
        <fullName>Firm_Product</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.FirmProduct</value>
        </filters>
        <label>Firm-Product</label>
    </listViews>
    <listViews>
        <fullName>Mutual_Fund</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.MutualFund</value>
        </filters>
        <label>Mutual Fund</label>
    </listViews>
    <listViews>
        <fullName>Product_Additional_Info</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Status__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CDRQualitativeData__c.ProductAdditionalInfo</value>
        </filters>
        <label>Product-Additional Info</label>
    </listViews>
    <recordTypes>
        <fullName>AdditionalInfo</fullName>
        <active>true</active>
        <description>Use this for Additional Information CDR Qualitative Data</description>
        <label>Additional Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Benchmark</fullName>
        <active>true</active>
        <description>Use this for Benchmark CDR Qualitative Data</description>
        <label>Benchmark</label>
    </recordTypes>
    <recordTypes>
        <fullName>BenchmarkAdditionalInfo</fullName>
        <active>true</active>
        <description>Use this to indicate a given Benchmark is related to a given Additional Info</description>
        <label>Benchmark-Additional Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Use this for Contact CDR Qualitative Data</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContactAdditionalInfo</fullName>
        <active>true</active>
        <description>Use this to indicate a given Contact is related to a given Additional Info</description>
        <label>Contact-Additional Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>ETF</fullName>
        <active>true</active>
        <description>Use this for ETFs</description>
        <label>ETF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Firm</fullName>
        <active>true</active>
        <description>Use this for Firm CDR Qualitative Data</description>
        <label>Firm</label>
    </recordTypes>
    <recordTypes>
        <fullName>FirmAdditionalInfo</fullName>
        <active>true</active>
        <description>Use this to indicate a given Firm is related to a given Additional Information</description>
        <label>Firm-Additional Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>FirmChildFirm</fullName>
        <active>true</active>
        <description>Use this to indicate a given Firm is related to a given Child Firm (i.e., Natixis to Affiliates)</description>
        <label>Firm-Child Firm</label>
    </recordTypes>
    <recordTypes>
        <fullName>FirmContact</fullName>
        <active>true</active>
        <description>Use this to indicate a given Firm is related to a given Contact</description>
        <label>Firm-Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>FirmProduct</fullName>
        <active>true</active>
        <description>Use this for Firm Product CDR Qualitative Data</description>
        <label>Firm-Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>MutualFund</fullName>
        <active>true</active>
        <description>Use this for Mutual Fund Product Qualitative Data</description>
        <label>Mutual Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductAdditionalInfo</fullName>
        <active>true</active>
        <description>Use this to indicate a given Product is related to a given Additional Info</description>
        <label>Product-Additional Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductBenchmark</fullName>
        <active>true</active>
        <description>Use this to indicate a given Product is related to a given Benchmark</description>
        <label>Product-Benchmark</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductChildProduct</fullName>
        <active>true</active>
        <description>Use this to indicate a given Product is related to a given Child Product (i.e., MF-Share Class)</description>
        <label>Product-Child Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductContact</fullName>
        <active>true</active>
        <description>Use this to indicate a given Product is related to a given Contact</description>
        <label>Product-Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShareClass</fullName>
        <active>true</active>
        <description>Use this for Share Class Qualitative Data</description>
        <label>Share Class</label>
    </recordTypes>
</CustomObject>